<resources>
    <string name="autor">Raquel Bayas</string>
    <string name="versionApp">Versión 1.2</string>
    <string name="version">Version</string>
    <string name="acerca">Acerca de Hey, Mama!</string>
    <string name="infoApp">Información de la aplicación:</string>
    <string name="tutorial">Tutorial</string>
    <string name="terminos">Términos de Servicio</string>
    <string name="politicas">Políticas de Privacidad</string>
    <string name="app_name">Hey,\nmama!</string>
    <string name="login">Iniciar sesión</string>
    <string name="logup">Registrarse</string>
    <string name="logout">Cerrar sesion</string>
    <string name="empezar">Empezar</string>
    <string name="usuario">Usuario</string>
    <string name="profesional">Profesional</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="acceder">Acceder</string>
    <string name="recordar_contraseña">Recordar contraseña</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="introduceEmail">Introduce tu correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="prompt_password">Password</string>
    <string name="ContraseñaInsegura">Contraseña insegura</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="bienvenida">Bienvenida</string>
    <string name="comotesientes">¿Cómo te sientes hoy?</string>
    <string name="foros">Foros</string>
    <string name="informacion">Información</string>
    <string name="consultas">Consultas</string>
    <string name="depresion">Depresión</string>
    <string name="posparto">Posparto</string>
    <string name="embarazo">Embarazo</string>
    <string name="otros">Otros</string>

    <!-- Post foro -->
    <string name="enviar">Enviar</string>
    <string name="foro">Foro</string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>

    <!-- Perfil -->
    <string name="amigos">Amigos</string>
    <string name="mensajes">Mensajes</string>
    <string name="verImagen">Ver imagen</string>
    <string name="cambiarImagen">Cambiar imagen</string>


    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">Buscar amigo</string>

    <!-- Contacto -->
    <string name="contacto">Contacto</string>
    <string name="consulta">Consulta</string>
    <string name="unounodos">112</string>
    <string name="cerodoscuatro">024</string>
    <string name="prevencionSuicidio">Número de Prevención del Suicidio</string>
    <string name="NNE">Número Nacional de Emergencia</string>
    <string name="hint_edt_consulta">Introduce tu consulta</string>
    <string name="misConsultas">Mis \nConsultas</string>
    <string-array name="temasConsultas">
        <item>Elige un tema</item>
        <item>Embarazo</item>
        <item>Parto</item>
        <item>Posparto</item>
        <item>Familia</item>
        <item>Otros</item>
    </string-array>
    <string name="cerrarConsulta">Cerrar consulta</string>

    <!-- Respirar -->
    <string name="respirar">Respirar</string>
    <string name="parar">Parar</string>

    <!-- Menu nav bar -->
    <string name="nav_item_perfil">Perfil</string>
    <string name="nav_item_messages">Mensajes</string>
    <string name="nav_item_solicitudes">Solicitudes</string>
    <string name="nav_item_mood">Emociones</string>
    <string name="nav_item_respirar">Respirar</string>
    <string name="nav_item_consultas">Consultas</string>
    <string name="nav_item_ajustes">Ajustes</string>
    <string name="nav_item_notifications">Notificaciones</string>
    <string name="nav_item_timeline">Timeline</string>
    <!-- Bottom nav bar -->
    <string name="nav_item_home">Perfil</string>
    <string name="nav_item_foros">Foros</string>
    <string name="nav_item_friends">Amigos</string>

    <!-- Settings -->
    <string name="nombre">Nombre</string>
    <string name="bio">Biografía</string>
    <string name="old_name">Nombre actual</string>
    <string name="new_name">Nombre nuevo</string>
    <string name="bio_actual">Biografía actual</string>
    <string name="bio_nueva">Nueva biografía</string>
    <string name="settings_name">Cambiar nombre</string>
    <string name="settings_username">Cambiar nombre de usuario</string>
    <string name="settings_bio">Cambiar biografía</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="privacidad">Cambiar privacidad</string>
    <string name="change_email">Cambiar correo electrónico</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="settings_old_username">Nombre de usuario actual</string>
    <string name="settings_new_username">Nuevo nombre de usuario</string>
    <string name="settings_old_email">Correo electrónico actual</string>
    <string name="settings_new_email">Nuevo correo electrónico</string>
    <string name="email_updated">Correo electrónico actualizado</string>
    <string name="settings_empty_input_password">Introduce la contraseña</string>
    <string name="txt_settings_current_password">Introduce tu contraseña actual</string>
    <string name="txt_settings_new_password">Introduce la nueva contraseña</string>
    <string name="txt_settings_confirm_new_password">Confirma la nueva contraseña</string>

    <!-- Mood -->
    <string name="mood_register">Registro de emociones</string>
    <!-- Artículos -->
    <string name="articulo_titulo">Título del artículo</string>
    <string name="articulo_contenido">Artículo</string>
    <string name="articulos">Artículos</string>
    <string name="btn_articulo">Publicar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="alert_eliminar">¿Deseas eliminar el artículo?</string>
    <string name="add_comment">Añadir comentario</string>
    <string name="titulo">Introduce un título</string>
    <string name="comentario">Introduce un comentario</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="listaUsuarios">Lista de usuarios</string>
    <string name="usuariosregistrados">Lista completa de los usuarios registrados en la app</string>

    <!-- Políticas de privacidad -->
    <string name="policy_1st">
        El presente Política de Privacidad establece los términos en que Hey, mama! usa y protege la información que es proporcionada por sus usuarios al momento de utilizar
        su aplicación. Esta aplicación está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual
        usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad
        puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos
        cambios.
    </string>
    <string name="policy_2">Información que es recogida</string>
    <string name="policy_2nd">
        Nuestro aplicación podrá recoger información personal por ejemplo: Nombre, información de contacto como su dirección de correo electrónica. Uso de la información recogida
        Nuestra aplicación emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios.
        Hey, mama! está altamente comprometido para cumplir con el compromiso de mantener su información segura.
        Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.
    </string>
    <string name="policy_3">Enlaces a Terceros</string>
    <string name="policy_3rd">
        Esta aplicación pudiera contener enlaces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra aplicación,
        ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros.
        Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.
    </string>
    <string name="policy_4">Control de su información personal</string>
    <string name="policy_4rd">
        En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.
        Hey, mama! no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.
        Hey, mama! se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>