<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:title="@string/nav_item_home"
            android:id="@+id/nav_bottom_item_home"
            android:icon="@drawable/casa"/>

        <item
            android:id="@+id/nav_item_notifications"
            android:title="@string/nav_item_notifications"
            android:icon="@drawable/ic_notifications"/>

        <item
            android:title="@string/nav_item_timeline"
            android:id="@+id/nav_item_timeline"
            android:icon="@drawable/menu"/>

        <item
            android:id="@+id/nav_item_solicitudes"
            android:title="@string/nav_item_solicitudes"
            android:icon="@drawable/ic_solicitudes"/>

        <item
            android:id="@+id/nav_item_ajustes"
            android:title="@string/nav_item_ajustes"
            android:icon="@drawable/settings"/>

        <item
            android:id="@+id/nav_item_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout" />
    </group>
</menu>