<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/container"
    tools:context=".fragments.PoliticasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:textColor="@color/gray"
                android:text="@string/politicas"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alegreya"
                android:text="@string/policy_1st"
                android:textAlignment="viewStart"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:textColor="@color/gray"
                android:text="@string/policy_2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/alegreya"
                android:text="@string/policy_2nd"
                android:textAlignment="viewStart"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:textColor="@color/gray"
                android:text="@string/policy_3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/alegreya"
                android:text="@string/policy_3rd"
                android:textAlignment="viewStart"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:textColor="@color/gray"
                android:text="@string/policy_4"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/alegreya"
                android:text="@string/policy_4rd"
                android:textAlignment="viewStart"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>