<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_recordar_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RememberPassword"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="46dp">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/corben_bold"
        android:text="@string/app_name"
        android:textColor="@color/wine_1"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <EditText
        android:id="@+id/txt_recordar_email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/edittext_white"
        android:ems="10"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:padding="10dp"
        android:hint="@string/correoElectronico"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya"
        android:text="@string/introduceEmail"
        android:textColor="@color/wine_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="119dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="@+id/appname"
        app:layout_constraintEnd_toEndOf="@+id/appname"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/iconohome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recordarpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_pink_home"
        android:fontFamily="@font/alegreya"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/recordar_contraseña"
        android:textAllCaps="false"
        android:textColor="@color/wine_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recordar_email"
        app:layout_constraintVertical_bias="0.105" />

</androidx.constraintlayout.widget.ConstraintLayout>