<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityInfoApp"
    tools:context=".activities.InfoAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya"
            android:textColor="@color/fonts"
            android:textSize="30sp"
            android:layout_margin="20dp"
            android:text="@string/infoApp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_policy"
                />
            <TextView
                android:id="@+id/txt_politicas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/alegreya"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray"
                android:textSize="28sp"
                android:text="@string/politicas" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_version"
                />
            <TextView
                android:id="@+id/txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray"
                android:textSize="26sp"
                android:text="@string/version" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>