<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/settings_txt_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_old_username"
            android:textSize="20sp"
            android:fontFamily="@font/alegreya"
            />
        <TextView
            android:id="@+id/settings_old_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alegreya_black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/settings_txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_settings_current_password"
            android:textSize="20sp"
            android:fontFamily="@font/alegreya"
            />
        <EditText
            android:id="@+id/edt_settings_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/alegreya_black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/settings_txt_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_new_username"
            android:textSize="20sp"
            android:fontFamily="@font/alegreya"
            />
        <EditText
            android:id="@+id/edt_settings_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/alegreya_black"
            />
    </LinearLayout>


</LinearLayout>